Fix text in message to be readable in dark mode

--- a/src/styles/NoExtensionsMessage.css
+++ b/src/styles/NoExtensionsMessage.css
@@ -5,7 +5,18 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 2em 0;
+    border-radius: 20px;
+
+    background-color: var(--bg-primary);
+    color: var(--text-primary);
     margin-top: 100px;
+    box-shadow: 0px 2px 3px #D9E5F4;
+    border: 1px solid var(--border);
+}
+
+.dark-mode .no-results {
+    box-shadow: none;
 }
 
 .no-results p.svg {
